--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3142,6 +3142,7 @@ input, select, textarea {
 
 			header.major h2 {
 				font-size: 1.35em;
+				color: black;
 			}
 
 		/* List */
@@ -3218,4 +3219,9 @@ input, select, textarea {
 				padding-left: 0;
 			}
 
+	}
+
+	/* Extra CSS */
+	#work__title{
+		color: black;
 	}
